--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <img src="assets/logo.svg" alt="Logo" class="logo">
             </a>
             <ul>
-                <li><a class="active" href="#">Inicio</a></li>
-                <li><a href="#">Geometría</a></li>
-                <li><a href="#">Financiera</a></li>
+                <li><a class="active" href="https://vidcraft3380.github.io/calculator/">Inicio</a></li>
+                <li><a href="https://vidcraft3380.github.io/calculator/geometry/">Geometría</a></li>
+                <li><a href="https://vidcraft3380.github.io/calculator/finance/">Financiera</a></li>
             </ul>
         </nav>
         <section></section>
