--- a/finance/geometric.html
+++ b/finance/geometric.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Financiera | Progresiones geometrias</title>
+    <title>Financiera | Progresiones geometricas</title>
     <link rel="stylesheet" href="../styles/finance.css">
 </head>
 <body>
@@ -18,9 +18,9 @@
                 <img src="../assets/logo.svg" alt="Logo" class="logo">
             </a>
             <ul>
-                <li><a class="active" href="#">Inicio</a></li>
-                <li><a href="#">Geometría</a></li>
-                <li><a href="#">Financiera</a></li>
+                <li><a class="active" href="https://vidcraft3380.github.io/calculator/">Inicio</a></li>
+                <li><a href="https://vidcraft3380.github.io/calculator/geometry/">Geometría</a></li>
+                <li><a href="https://vidcraft3380.github.io/calculator/finance/">Financiera</a></li>
             </ul>
         </nav>
         <section></section>
